# autotune-app

./: .env.local.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: SETUP_COMPLETE.md  copilot-instructions.md
.github/chatmodes/: debugger.chatmode.md  planner.chatmode.md
.github/instructions/: appdescription.insructions.md  containerization.instructions.md  documentation.instructions.md  prefect.instructions.md  python.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: create-prefect-task.prompt.md  generate-docs.prompt.md  github-copilot-starter.prompt.md  refactor-code.prompt.md  write-tests.prompt.md
.github/prompts/history/: create-app.md
.github/workflows/: copilot-setup-steps.yml
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md
src/app/clients/: autotune_client.py  nightscout_client.py
src/app/models/: __init__.py  autotune.py  nightscout.py
src/app/services/: __init__.py  autotune_service.py  nightscout_service.py
tests/: __init__.py
tests/unit/: test_autotune_client.py  test_autotune_service.py  test_nightscout_client.py  test_nightscout_service.py
