[project]
name = "autotune-app"
version = "0.1.0"
description = "Automated AAPS profile generation using autotune tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "prefect>=2.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
